[package]
name = "marain-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
env_logger = "0.11.1"
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
uuid = { version = "1.7.0", features = ["v4", "macro-diagnostics"] }
marain-api = { git = "https://github.com/tjweldon/marain-api.git", rev = "refs/heads/main" }
serde_json = "1.0.113"
serde-binary = "0.5.0"
